--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <title>Games</title>
   
-  <link rel="stylesheet" href="proj 1.css">
+  <link rel="stylesheet" href="proj%201.css">
 </head>
 <body>
   <h1> Games</h1>
